Add new blog posts and related assets
- Created "My First Post" and "My Second Post" with HTML structure and content.
- Added a new post titled "New Post" with an accompanying image.
- Implemented a pagination page for posts.
- Generated a sitemap for better SEO.
- Developed a tags page with a corresponding RSS feed.
- Added favicon for the blog.

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,17 @@
 baseURL: https://example.org/
 languageCode: zh-cn
-title: 我的新Hugo网站
-theme: ananke
+title: 博客
+theme: PaperMod
+params:
+  assets:
+    # disableHLJS: true # to disable highlight.js
+    # disableFingerprinting: true
+    favicon: /favicon.ico
+menus:
+  main:
+  - name: 主页
+    pageRef: /
+    weight: 10
+caches:
+  images:
+    dir: :cacheDir/images
